Updated Glossary (mediawiki)

--- a/Glossary.mediawiki
+++ b/Glossary.mediawiki
@@ -1,2 +1,2 @@
 ; FST
-: A computational formalism that is useful for defining functions that convert an input string into an output string. In practice, linguists can use this to convert a [[wordform]] into a [[lexeme]]+[[tags]] and vice-versa. See main article: [[Finite-state transducer]].
+: A '''finite-state transducer''' is a computational formalism that is useful for defining functions that convert an input string into an output string. In practice, linguists can use this to convert a [[wordform]] into its [[lexeme]]+[[tags]] and vice-versa. See main article: [[Finite-state transducer]].
