--- a/Glossary.mediawiki
+++ b/Glossary.mediawiki
@@ -1,2 +1,6 @@
+; <a href="#analyzer" id="analyzer">analyzer</a>
+: An '''analyzer''' is an [[Glossary#FST|FST]] intended primarily to convert [[Glossary#wordform|wordforms]] into a [[Glossary#analysis|morphological analysis]]. For example, if you apply the Cree analyzer to the wordform <code>ê-wâpamit</code>, it will return the analysis <code>PV/e+wâpamêw+V+TA+Cnj+Prs+3Sg+1SgO</code>, meaning the [[Glossary#lemma|lemma]] is "wâpamêw", it's a '''Transivtive''' '''Animate''' '''Verb''', in the '''Conjunct''' form, in the '''Present''' tense with a '''3rd person singular''' [[Glossary#actor|actor]] and a '''first-person singular''' [[Glossary#object|object]]. 
+
+
 ; <a href="#FST" id="FST">FST</a>
-: A '''finite-state transducer''' is a computational formalism that is useful for defining functions that convert an input string into an output string. In practice, linguists can use this to convert a [[wordform]] into its [[lexeme]]+[[tags]] and vice-versa. See main article: [[Finite-state transducer]].
+: A '''finite-state transducer''' is a computational formalism that is useful for defining functions that convert an input string into an output string. In practice, linguists can use this to convert a [[Glossary#wordform|wordform]] into its [[Glossary#lexeme|lexeme]]+[[Glossary#tags|tags]] and back again. See main article: [[Finite-state transducer]].
