--- a/Glossary.mediawiki
+++ b/Glossary.mediawiki
@@ -2,7 +2,7 @@
 : An '''analyzer''' is an [[Glossary#FST|FST]] intended primarily to convert [[Glossary#wordform|wordforms]] into a [[Glossary#analysis|morphological analysis]]. For example, if you apply the Cree analyzer to the wordform <code>ê-wâpamit</code>, it will return the analysis <code>PV/e+wâpamêw+V+TA+Cnj+Prs+3Sg+1SgO</code>, meaning the [[Glossary#lemma|lemma]] is "wâpamêw", it's a '''Transivtive''' '''Animate''' '''Verb''', in the '''Conjunct''' form, in the '''Present''' tense with a '''3rd person singular''' [[Glossary#actor|actor]] and a '''first-person singular''' [[Glossary#object|object]].
 
 ; <a href="#descriptive" id="descriptive">descriptive</a>
-: A '''descriptive''' [[Glossary#FST|FST]] operates on orthographically dubious text. This means that the text may be written in a non-standard orthography, make some common spelling mistakes, and may be lacking accents or aspiration marks where they would be required in "correct" text. Think [[https://en.wikipedia.org/wiki/Linguistic_description|descriptive linguistics]]. In practice, we use '''descriptive [[Glossary#analyzer|analyzers]]''' to accept input and wordforms however people may type it—we allow for some wiggle-room and forgive orthographic mistakes, in the hope that the FST will find the most appropriate analysis.
+: A '''descriptive''' [[Glossary#FST|FST]] operates on orthographically dubious text. This means that the text may be written in a non-standard orthography, make some common spelling mistakes, and may be lacking accents or aspiration marks where they would be required in "correct" text. Think [https://en.wikipedia.org/wiki/Linguistic_description descriptive linguistics]. In practice, we use '''descriptive [[Glossary#analyzer|analyzers]]''' to accept input and wordforms however people may type it—we allow for some wiggle-room and forgive orthographic mistakes, in the hope that the FST will find the most appropriate analysis.
 
 ; <a href="#FST" id="FST">FST</a>
 : A '''finite-state transducer''' is a computational formalism that is useful for defining functions that convert an input string into an output string. In practice, linguists can use this to convert a [[Glossary#wordform|wordform]] into its [[Glossary#lexeme|lexeme]]+[[Glossary#tags|tags]] and back again. See main article: [[Finite-state transducer]].
