--- a/neahtta/translations/crk/LC_MESSAGES/messages.po
+++ b/neahtta/translations/crk/LC_MESSAGES/messages.po
@@ -514,7 +514,7 @@ msgstr ""
 msgid "Search for a word, or a word form for a word analysis and definition."
 msgstr ""
 "nitona nêhiyaw-itwêwin ta-miskaman âkayâsiwascikêwin (êkwa mîna tânisi "
-"kâ-isi-âniskôpitamihk)."
+"kâ-isi-âniskôpitamihk).\nnawac itwêwina: <a href="https://itwewina.dev/">itwewina.dev</a>"
 
 #: configs/language_specific_rules/templates/gunaha/about.template:28
 #: configs/language_specific_rules/templates/itwewina/about.template:31
